remove likes number to avoid call apis too much, update html file to display on mobile correctly

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -10,6 +10,6 @@ form label.form-label {
 }
 .video-description {
   white-space: pre-line;
-  max-height: 170px;
+  max-height: 185px;
   overflow: scroll;
 }
